<resources>
    <string name="app_name">9jaQuiz</string>
    <string name="_00_00">00.00</string>
    <string name="option_4">D</string>
    <string name="option_3">C</string>
    <string name="option_2">B</string>
    <string name="what_is_the_question">Questions</string>
    <string name="option_1">A</string>
    <string name="statistics">Statistics</string>
    <string name="total_questions">Total Questions :</string>
    <string name="correct">Correct :</string>
    <string name="incorrect">Incorrect :</string>
</resources>
